Fix widget on small screens
Fix issue where space snake widget causes it's container to expand beyond small screens.

--- a/styles/style.css
+++ b/styles/style.css
@@ -282,4 +282,9 @@ h6 {
     .project-slide-content {
         flex-direction: column-reverse;
     }
+
+    #space-snake-widget {
+        width: 100%;
+        height: auto;
+    }
 }
